--- a/empty_CC1352R1_LAUNCHXL_tirtos_ccs/.project
+++ b/empty_CC1352R1_LAUNCHXL_tirtos_ccs/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>empty_CC1352R1_LAUNCHXL_tirtos_ccs</name>
+	<name>blinking</name>
 	<comment></comment>
 	<projects>
 		<project>tirtos_builds_cc13x2_cc26x2_release_ccs</project>
